--- a/site1-main/website/index.html
+++ b/site1-main/website/index.html
@@ -18,6 +18,7 @@
                 <ul>
                     <li><a href="#about">О сервере</a></li>
                     <li><a href="#how-to-join">Как начать играть</a></li>
+                    <li><a href="#roulette" id="roulette-btn">Рулетка</a></li>
                     <li><a href="#donate" class="donate-btn">Поддержать</a></li>
                     <li id="auth-container">
                         <a href="#" id="login-btn" class="discord-btn"><i class="fab fa-discord"></i> Войти через Discord</a>
@@ -193,6 +194,38 @@
         </div>
     </div>
 
+    <div id="roulette-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="close-roulette">&times;</span>
+            <h2>Рулетка MineStory</h2>
+            <div class="user-balance">
+                <p>Ваш баланс: <span id="user-coins">0</span> монет</p>
+            </div>
+            <div class="roulette-container">
+                <div class="roulette-wheel">
+                    <div class="roulette-items">
+                        <div class="roulette-item" data-value="0">0</div>
+                        <div class="roulette-item" data-value="5">5</div>
+                        <div class="roulette-item" data-value="10">10</div>
+                        <div class="roulette-item" data-value="0">0</div>
+                        <div class="roulette-item" data-value="5">5</div>
+                        <div class="roulette-item" data-value="100">100</div>
+                        <div class="roulette-item" data-value="5">5</div>
+                        <div class="roulette-item" data-value="10">10</div>
+                        <div class="roulette-item" data-value="0">0</div>
+                        <div class="roulette-item" data-value="5">5</div>
+                        <div class="roulette-item" data-value="1000">1000</div>
+                        <div class="roulette-item" data-value="0">0</div>
+                    </div>
+                    <div class="pointer"></div>
+                </div>
+                <button id="spin-button" class="spin-btn">Крутить рулетку</button>
+                <p class="cooldown-message" id="cooldown-message" style="display: none;">Вы можете крутить рулетку раз в 6 часов</p>
+                <div class="result-message" id="result-message"></div>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -214,5 +247,6 @@
 
     <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/roulette.js"></script>
 </body>
 </html> 
