--- a/site1-main/website/profile.html
+++ b/site1-main/website/profile.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
 
-                <button id="spin-button" class="spin-button">Крутить рулетку</button>
+                <button id="spin-button" class="spin-button">КРУТИ!</button>
                 <div class="cooldown-timer" id="cooldown-timer"></div>
             </div>
         </div>
