--- a/site1-main/website/profile.html
+++ b/site1-main/website/profile.html
@@ -96,11 +96,11 @@
                 <div class="roulette-container">
                     <div class="wheel-pointer"></div>
                     <div class="wheel" id="roulette-wheel">
-                        <div class="wheel-segment">5</div>
-                        <div class="wheel-segment">10</div>
-                        <div class="wheel-segment">20</div>
-                        <div class="wheel-segment">50</div>
-                        <div class="wheel-segment">100</div>
+                        <div class="wheel-segment segment-5">5</div>
+                        <div class="wheel-segment segment-10">10</div>
+                        <div class="wheel-segment segment-20">20</div>
+                        <div class="wheel-segment segment-50">50</div>
+                        <div class="wheel-segment segment-100">100</div>
                         <div class="wheel-center">КРУТИ!</div>
                     </div>
                 </div>
