--- a/site1-main/website/profile.html
+++ b/site1-main/website/profile.html
@@ -96,16 +96,19 @@
                 <div class="roulette-container">
                     <div class="wheel-pointer"></div>
                     <div class="wheel" id="roulette-wheel">
-                        <div class="wheel-segment segment-5">5</div>
-                        <div class="wheel-segment segment-10">10</div>
-                        <div class="wheel-segment segment-20">20</div>
-                        <div class="wheel-segment segment-50">50</div>
-                        <div class="wheel-segment segment-100">100</div>
+                        <div class="wheel-segment segment-5">МОНЕТ</div>
+                        <div class="wheel-segment segment-10">МОНЕТ</div>
+                        <div class="wheel-segment segment-20">МОНЕТ</div>
+                        <div class="wheel-segment segment-50">МОНЕТ</div>
+                        <div class="wheel-segment segment-100">МОНЕТ</div>
                         <div class="wheel-center">КРУТИ!</div>
                     </div>
                 </div>
 
-                <button id="spin-button" class="spin-button">КРУТИ!</button>
+                <div class="roulette-buttons">
+                    <button id="spin-button" class="spin-button">КРУТИ!</button>
+                    <button id="demo-button" class="demo-button">ДЕМО</button>
+                </div>
                 <div class="cooldown-timer" id="cooldown-timer"></div>
             </div>
         </div>
