--- a/site1-main/website/profile.html
+++ b/site1-main/website/profile.html
@@ -96,11 +96,26 @@
                 <div class="roulette-container">
                     <div class="wheel-pointer"></div>
                     <div class="wheel" id="roulette-wheel">
-                        <div class="wheel-segment segment-5">МОНЕТ</div>
-                        <div class="wheel-segment segment-10">МОНЕТ</div>
-                        <div class="wheel-segment segment-20">МОНЕТ</div>
-                        <div class="wheel-segment segment-50">МОНЕТ</div>
-                        <div class="wheel-segment segment-100">МОНЕТ</div>
+                        <div class="wheel-segment segment-5">
+                            <span class="prize-value">5</span>
+                            <span class="prize-text">МОНЕТ</span>
+                        </div>
+                        <div class="wheel-segment segment-10">
+                            <span class="prize-value">10</span>
+                            <span class="prize-text">МОНЕТ</span>
+                        </div>
+                        <div class="wheel-segment segment-20">
+                            <span class="prize-value">20</span>
+                            <span class="prize-text">МОНЕТ</span>
+                        </div>
+                        <div class="wheel-segment segment-50">
+                            <span class="prize-value">50</span>
+                            <span class="prize-text">МОНЕТ</span>
+                        </div>
+                        <div class="wheel-segment segment-100">
+                            <span class="prize-value">100</span>
+                            <span class="prize-text">МОНЕТ</span>
+                        </div>
                         <div class="wheel-center">КРУТИ!</div>
                     </div>
                 </div>
