--- a/site1-main/website/index.html
+++ b/site1-main/website/index.html
@@ -103,43 +103,59 @@
                 <div class="package">
                     <h3>Титул</h3>
                     <div class="price">
-                        <span class="original-price">200 ₽</span>
-                        <span class="discounted-price">100 ₽</span>
+                        <span class="original-price">150 ₽</span>
+                        <span class="discounted-price">79 ₽</span>
                     </div>
                     <ul>
                         <li>Получите уникальный титул в игре</li>
                         <li>Отображается над головой персонажа</li>
                         <li>Доступен для всех игроков</li>
                     </ul>
-                    <button class="buy-btn" data-package="title" data-price="100">Купить</button>
+                    <button class="buy-btn" data-package="title" data-price="79">Купить</button>
                 </div>
 
                 <div class="package">
                     <h3>Изменение размера</h3>
                     <div class="price">
                         <span class="original-price">100 ₽</span>
-                        <span class="discounted-price">50 ₽</span>
+                        <span class="discounted-price">59 ₽</span>
                     </div>
                     <ul>
-                        <li>Изменение размера вашего персонажа</li>
-                        <li>Доступны разные размеры</li>
-                        <li>Можно менять в любое время</li>
+                        <li>Можно выбрать быть маленьким или большим</li>
+                        <li>Уникальный игровой опыт</li>
+                        <li>Удивите других игроков</li>
                     </ul>
-                    <button class="buy-btn" data-package="size" data-price="50">Купить</button>
+                    <button class="buy-btn" data-package="size" data-price="59">Купить</button>
+                </div>
+
+                <div class="package">
+                    <h3>Разбан</h3>
+                    <div class="price">
+                        <span class="discounted-price">59 ₽</span>
+                    </div>
+                    <ul>
+                        <li>Разбан на сервере после нарушения</li>
+                        <li>Второй шанс для игры</li>
+                        <li>Быстрое восстановление доступа</li>
+                    </ul>
+                    <button class="buy-btn" data-package="unban" data-price="59">Купить</button>
                 </div>
 
                 <div class="package popular">
-                    <div class="popular-badge">MS+</div>
-                    <h3>MineStory Plus</h3>
-                    <div class="price" id="msplus-price">300 ₽</div>
+                    <div class="popular-badge">СКИДКА!</div>
+                    <h3>+2 Сердца навсегда</h3>
+                    <div class="price">
+                        <span class="original-price">199 ₽</span>
+                        <span class="discounted-price">99 ₽</span>
+                    </div>
                     <ul>
-                        <li>Роль "MS+" в Discord</li>
-                        <li>Персональный префикс в чате</li>
-                        <li>Крутой эффект при входе на спавн</li>
-                        <li>Доступ к эксклюзивным командам</li>
-                        <li>Упоминание в списке спонсоров</li>
+                        <li>Дополнительные 2 сердца здоровья</li>
+                        <li>Действует постоянно</li>
+                        <li>Повышенная выживаемость в бою</li>
+                        <li>Преимущество на PvP-аренах</li>
+                        <li>Удобно для исследования опасных мест</li>
                     </ul>
-                    <button class="buy-btn" data-package="msplus" data-period="monthly">Купить</button>
+                    <button class="buy-btn" data-package="hearts" data-price="99">Купить</button>
                 </div>
             </div>
         </div>
