--- a/site1-main/website/index.html
+++ b/site1-main/website/index.html
@@ -147,6 +147,20 @@
                     <button class="buy-btn" data-package="doublejump" data-price="150">Купить</button>
                 </div>
 
+                <div class="package">
+                    <h3>Элитры</h3>
+                    <div class="price">
+                        <span class="discounted-price">250 ₽</span>
+                    </div>
+                    <ul>
+                        <li>Получите элитры для полетов</li>
+                        <li>Исследуйте мир с высоты птичьего полета</li>
+                        <li>Быстрое перемещение по серверу</li>
+                        <li>Уникальные возможности для строительства</li>
+                    </ul>
+                    <button class="buy-btn" data-package="elytra" data-price="250">Купить</button>
+                </div>
+
                 <div class="package popular">
                     <div class="popular-badge">СКИДКА!</div>
                     <h3>+2 Сердца навсегда</h3>
