--- a/site1-main/website/index.html
+++ b/site1-main/website/index.html
@@ -162,6 +162,20 @@
                     </ul>
                     <button class="buy-btn" data-package="hearts" data-price="99">Купить</button>
                 </div>
+
+                <div class="package">
+                    <h3>Элитры</h3>
+                    <div class="price">
+                        <span class="discounted-price">250 ₽</span>
+                    </div>
+                    <ul>
+                        <li>Получите элитры в игре</li>
+                        <li>Возможность летать по всему миру</li>
+                        <li>Быстрое перемещение на большие расстояния</li>
+                        <li>Уникальный способ исследования мира</li>
+                    </ul>
+                    <button class="buy-btn" data-package="elytra" data-price="250">Купить</button>
+                </div>
             </div>
         </div>
     </section>
