--- a/site1-main/website/index.html
+++ b/site1-main/website/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="hero-content">
                 <h2>Добро пожаловать на MineStory</h2>
-                <p>Приватный ванильный сервер, на котором можно расслабиться</p>
+                <p>MineStory Anarchy — новый сервер Minecraft</p>
                 <a href="#donate" class="btn">Поддержать сервер</a>
             </div>
         </div>
@@ -45,7 +45,7 @@
             <div class="about-content">
                 <div class="about-text-wrapper">
                     <div class="about-text">
-                        <p>MineStory — это приватный ванильный сервер, на котором можно расслабиться. Сервер дополнен соответствующими плагинами для комфортной игры.</p>
+                        <p>Уникальный режим: "Лут за прыжки в пустоте"</p>
                         <div class="server-info-wrapper">
                             <ul class="server-info">
                                 <li><i class="fas fa-gamepad"></i> Версия: 1.21+</li>
