--- a/site1-main/website/index.html
+++ b/site1-main/website/index.html
@@ -80,7 +80,7 @@
                 <div class="step">
                     <div class="step-number">3</div>
                     <h3>Подключиться к серверу</h3>
-                    <p>Используйте IP сервера: <span class="server-ip">minestoryvanilla.imba.land</span></p>
+                    <p>Используйте IP сервера, который вам скажет бот в дискорде</p>
                 </div>
             </div>
         </div>
